compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__add_missing_patterns_inline.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main(a: Bool) {\n  let value = case a {}\n}\n"
---
----- BEFORE ACTION

pub fn main(a: Bool) {
  let value = case a {}
              ▔▔▔▔▔↑   
}


----- AFTER ACTION

pub fn main(a: Bool) {
  let value = case a {
    False -> todo
    True -> todo
  }
}
