compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__add_missing_patterns_multibyte_grapheme.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\n// ä\nfn wibble() {\n  case True {}\n}\n"
---
----- BEFORE ACTION

// ä
fn wibble() {
  case True {}
  ▔▔▔▔▔↑      
}


----- AFTER ACTION

// ä
fn wibble() {
  case True {
    True -> todo
  }
}
