compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_assert_custom_type_with_punned_labels_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(\"\npub type Wibble { Wibble(arg: Int, arg2: Float) }\npub fn main() {\n  let assert Wibble(arg2:, ..) = Wibble(arg: 1, arg2: 1.0)\n}\n\",\n    3, CONVERT_TO_CASE)"
---
pub type Wibble { Wibble(arg: Int, arg2: Float) }
pub fn main() {
  let arg2 = case Wibble(arg: 1, arg2: 1.0) {
    Wibble(arg2:, ..) -> arg2
    _ -> panic
  }
}
