compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_from_use_expression_with_parens_and_other_args.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  use <- wibble(1, 2)\n  todo\n  todo\n}\n\nfn wibble(n, m, f) {\n    f()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use <- wibble(1, 2)
         ▔▔▔▔▔▔▔↑    
  todo
  todo
}

fn wibble(n, m, f) {
    f()
}


----- AFTER ACTION

pub fn main() {
  wibble(1, 2, fn() {
    todo
    todo
  })
}

fn wibble(n, m, f) {
    f()
}
